# foolery-football

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  cloudbuild.yaml  leagues.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
docs/: HOW_TO_REPLAY_2025.md  M2_HOW_TO_RUN.md  RELIABILITY.md  SECURITY.md  index.md
docs/product-specs/: milestone-1-stats-store.md  milestone-2-decision-engine.md  milestone-3-model-upgrade.md  milestone-4-scratch-model.md
docs/product-specs/milestone-1/: 1.1-player-metadata.md  1.2-weekly-stats.md  1.3-local-storage-layout.md
docs/product-specs/milestone-2/: 2.1-sleeper-league-fetch.md  2.2-scoring-model.md  2.3-cli-output.md
docs/product-specs/milestone-3/: 3.1-projections-and-availability-gate.md  3.2-blend-model.md  3.3-lineup-assembly.md  3.4-eval-attribution-and-ship-gate.md
docs/references/: external-data.md  fantasy-glossary.md  nfl-2026-week-1.md  sleeper-api.md
docs/services/: decision-engine.md  stats-loader.md
evals/: README.md  aggregate.py  common.py  discover_leagues.py  run_eval.py  test_aggregate.py
evals/testdata/: leagues_2025.json
evals/testdata/synthetic_results/2025/: L1.json
infra/: README.md  bucket.tf  locals.tf  outputs.tf  terraform.tfvars.example  variables.tf
scripts/: backfill-schedule.py  backtest-models.py  fetch-injuries.py  find-league-chain.sh
services/api/: Dockerfile  pyproject.toml
services/api/src/api/: config.py  deps.py  entrypoint.py  errors.py  hydrate.py  live_cache.py  main.py  schemas.py  snapshot_gcs.py
services/api/src/api/routers/: comparison.py  context.py  decide.py  decisions.py  leagues.py  players.py  state.py
services/api/tests/: conftest.py  test_comparison.py  test_context.py  test_decisions_duplicates.py  test_decisions_invariants.py  test_hydrate.py  test_snapshot_gcs.py
services/app/: AGENTS.md  README.md  pyproject.toml
services/app/src/ffdm_app/: cli.py  season_cache.py  session.py  types.py
services/app/tests/unit/: test_season_cache.py  test_session.py
services/decision-engine/: AGENTS.md  README.md  pyproject.toml
services/decision-engine/src/decision_engine/: __init__.py  entrypoint.py  types.py
services/decision-engine/src/decision_engine/clients/: http.py  snapshot_reader.py
services/decision-engine/src/decision_engine/config/: __init__.py  settings.py
services/decision-engine/src/decision_engine/core/: eligibility.py  league_fetch.py  lineup.py  pipeline.py  replay.py
services/decision-engine/src/decision_engine/core/scoring/: __init__.py  blend.py  common.py  context.py  gbt.py  naive.py  protocol.py  scratch.py
services/decision-engine/src/decision_engine/providers/: sleeper.py
services/decision-engine/tests/integration/: test_2025_season.py
services/decision-engine/tests/unit/: fakes.py  test_config.py  test_eligibility.py  test_league_fetch.py  test_lineup.py  test_pipeline.py  test_providers_sleeper.py  test_replay.py  test_scoring_blend.py  test_scoring_context.py  test_scoring_gbt.py  test_scoring_naive.py  test_scoring_registry.py  test_scoring_scratch.py  test_snapshot_reader.py
services/stats-loader/: AGENTS.md  README.md  pyproject.toml
services/stats-loader/src/stats_loader/: __init__.py  entrypoint.py  types.py
services/stats-loader/src/stats_loader/clients/: http.py  snapshot_writer.py
services/stats-loader/src/stats_loader/config/: __init__.py  settings.py
services/stats-loader/src/stats_loader/core/: manifest.py  pipeline.py  state.py
services/stats-loader/src/stats_loader/providers/: sleeper.py
services/stats-loader/tests/integration/: test_live_sleeper.py
services/stats-loader/tests/unit/: fakes.py  test_config.py  test_http_client.py  test_pipeline.py  test_providers_sleeper.py  test_snapshot_writer.py  test_state.py
web/: components.json  index.html  package.json  pnpm-lock.yaml  vercel.json  vite.config.ts
web/src/: App.css  App.tsx  index.css  main.tsx
web/src/components/: CandidateRow.tsx  Combobox.tsx  ComparisonView.tsx  EntryForm.tsx  FieldSelect.tsx  ModelsDashboard.tsx  PlayerAvatar.tsx  PlayerDrawer.tsx  PositionChip.tsx  RecommendationPanel.tsx  ReportCard.tsx  RiskKnob.tsx  Sheet.tsx  SlotCard.tsx  StatNumber.tsx  TeamPrefs.tsx  ThemeToggle.tsx  WeekPicker.tsx
web/src/components/ui/: button.tsx  card.tsx  toggle.tsx
web/src/lib/: api.ts  positions.ts  theme.ts  useDebouncedValue.ts
