[project]
name = "api"
version = "0.1.0"
description = "FastAPI HTTP layer over the decision engine. Browser-facing."
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.7",
    "google-cloud-storage>=2.18",
    "stats-loader",
    "decision-engine",
    "ffdm-app",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
ffdm-api = "api.entrypoint:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api"]

[tool.uv.sources]
stats-loader = { path = "../stats-loader", editable = true }
decision-engine = { path = "../decision-engine", editable = true }
ffdm-app = { path = "../app", editable = true }

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# FastAPI's idiomatic Query(default=...) pattern triggers B008; it's how
# the library is meant to be used (mirrors the typer entrypoint
# exception in decision-engine).
"src/api/routers/*.py" = ["B008"]
"tests/**" = ["B011"]

[tool.mypy]
python_version = "3.13"
strict = true
files = ["src", "tests"]
mypy_path = "src"
explicit_package_bases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
pythonpath = ["src", "."]
