[project]
name = "ffdm-app"
version = "0.1.0"
description = "Interactive CLI that orchestrates stats-loader + decision-engine."
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "typer>=0.12",
    "stats-loader",
    "decision-engine",
]

[project.optional-dependencies]
dev = [
    "import-linter>=2.0",
    "mypy>=1.10",
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
ffdm = "ffdm_app.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ffdm_app"]

[tool.uv.sources]
stats-loader = { path = "../stats-loader", editable = true }
decision-engine = { path = "../decision-engine", editable = true }

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "SIM", # simplify
    "RUF",
]
ignore = [
    "E501", # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]
"src/ffdm_app/cli.py" = ["B008"]

[tool.mypy]
python_version = "3.13"
strict = true
files = ["src", "tests"]
mypy_path = "src"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_decorators = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

# ----- import-linter: enforce intra-service layering -----
# types -> season_cache -> session -> cli
[tool.importlinter]
root_packages = ["ffdm_app"]

[[tool.importlinter.contracts]]
name = "Layered architecture"
type = "layers"
layers = [
    "ffdm_app.cli",
    "ffdm_app.session",
    "ffdm_app.season_cache",
    "ffdm_app.types",
]
