[project]
name = "decision-engine"
version = "0.1.0"
description = "CLI that scores Sleeper roster + waiver players for a given slot and risk profile."
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "import-linter>=2.0",
    "mypy>=1.10",
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
decide = "decision_engine.entrypoint:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/decision_engine"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "SIM", # simplify
    "RUF",
]
ignore = [
    "E501", # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]
# typer's idiomatic Option(...) pattern triggers B008; it's how the
# library is meant to be used.
"src/decision_engine/entrypoint.py" = ["B008"]

[tool.mypy]
python_version = "3.13"
strict = true
files = ["src", "tests"]
mypy_path = "src"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_decorators = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: hits the real Sleeper API; skipped unless DECISION_ENGINE_INTEGRATION=1",
]

# ----- import-linter: enforce intra-service layering -----
# types -> config -> providers -> clients -> core -> entrypoint
[tool.importlinter]
root_packages = ["decision_engine"]

[[tool.importlinter.contracts]]
name = "Layered architecture"
type = "layers"
layers = [
    "decision_engine.entrypoint",
    "decision_engine.core",
    "decision_engine.clients",
    "decision_engine.providers",
    "decision_engine.config",
    "decision_engine.types",
]
